# aptly-rest-tools

./: Cargo.toml  Dockerfile.apt2aptly  Dockerfile.aptlyctl  Dockerfile.cli  Dockerfile.latest-snapshots  Dockerfile.obs2aptly  README.md
.github/workflows/: ci.yml
apt2aptly/: Cargo.toml
apt2aptly/src/: lib.rs  main.rs
aptly-latest-snapshots/: Cargo.toml
aptly-latest-snapshots/src/: lib.rs  main.rs
aptly-rest/: Cargo.toml
aptly-rest-mock/: Cargo.toml
aptly-rest-mock/data/: default-data.json  default-packages
aptly-rest-mock/src/: lib.rs  mirror.rs  package.rs  pool.rs  repo.rs
aptly-rest-mock/src/api/: mirrors.rs  mod.rs  packages.rs  repos.rs
aptly-rest/examples/: aptlyrestcli.rs  scanner.rs
aptly-rest/src/: changes.rs  dsc.rs  key.rs  lib.rs  old.rs
aptly-rest/src/api/: files.rs  mirrors.rs  mod.rs  packages.rs  publish.rs  repos.rs  snapshots.rs
aptly-rest/src/utils/: scanner.rs
aptly-rest/tests/: control_parsing.rs  mirrors.rs  repos.rs  version.rs
aptly-rest/tests/data/: systemd_247.3-6+apertis4.dsc  systemd_247.3-6+apertis4.dsc.keys  systemd_247.3-6+apertis4bv2023dev2b6_arm64.changes  systemd_247.3-6+apertis4bv2023dev2b6_arm64.changes.keys  systemd_247.3-7.dsc  systemd_247.3-7.dsc.keys
aptlyctl/: Cargo.toml
aptlyctl/src/: main.rs  mirror.rs  publish.rs  repo.rs  snapshot.rs  tools.rs
obs2aptly/: Cargo.toml  README.md
obs2aptly/src/: lib.rs  main.rs
obs2aptly/tests/: download_files.sh  generate_aptly_package.py  sync.rs
obs2aptly/tests/data/arch_all/: aptly.json  expected.json
obs2aptly/tests/data/empty_aptly/: aptly.json  expected.json
obs2aptly/tests/data/empty_aptly/obs/: bsdextrautils-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  bsdextrautils_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  bsdutils-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  bsdutils_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  eject-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  eject-udeb_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  eject_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  fdisk-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  fdisk-udeb_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  fdisk_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libblkid-dev_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libblkid1-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libblkid1-udeb_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libblkid1_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libfdisk-dev_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libfdisk1-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libfdisk1-udeb_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libfdisk1_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libmount-dev_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libmount1-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libmount1-udeb_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libmount1_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libsmartcols-dev_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libsmartcols1-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libsmartcols1-udeb_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libsmartcols1_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libuuid1-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libuuid1-udeb_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  libuuid1_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  mount-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  mount_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  rfkill-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  rfkill_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  util-linux-dbgsym_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  util-linux-locales_2.36.1-8+deb11u1+apertis1bv2023dev2b3_all.control  util-linux-udeb_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  util-linux_2.36.1-8+deb11u1+apertis1.dsc  util-linux_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.changes  util-linux_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  uuid-dev_2.36.1-8+deb11u1+apertis1bv2023dev2b3_amd64.control  (+2 more)
obs2aptly/tests/data/empty_obs/: aptly.json  expected.json
obs2aptly/tests/data/simple_updates/: aptly.json  expected.json  rust-bullseye.txt
obs2aptly/tests/data/simple_updates/obs/: libstd-rust-1.48-dbgsym_1.48.0+dfsg1-2co1bv2023dev2b4_amd64.control  libstd-rust-1.48-dbgsym_1.48.0+dfsg1-2co1bv2023dev2b4_arm64.control  libstd-rust-1.48-dbgsym_1.48.0+dfsg1-2co1bv2023dev2b4_armhf.control  libstd-rust-1.48_1.48.0+dfsg1-2co1bv2023dev2b4_amd64.control  libstd-rust-1.48_1.48.0+dfsg1-2co1bv2023dev2b4_arm64.control  libstd-rust-1.48_1.48.0+dfsg1-2co1bv2023dev2b4_armhf.control  libstd-rust-dev-wasm32_1.48.0+dfsg1-2co1bv2023dev2b4_all.control  libstd-rust-dev-windows_1.48.0+dfsg1-2co1bv2023dev2b4_amd64.control  libstd-rust-dev_1.48.0+dfsg1-2co1bv2023dev2b4_amd64.control  libstd-rust-dev_1.48.0+dfsg1-2co1bv2023dev2b4_arm64.control  libstd-rust-dev_1.48.0+dfsg1-2co1bv2023dev2b4_armhf.control  rust-doc_1.48.0+dfsg1-2co1bv2023dev2b4_all.control  rust-gdb_1.48.0+dfsg1-2co1bv2023dev2b4_all.control  rust-lldb_1.48.0+dfsg1-2co1bv2023dev2b4_all.control  rust-src_1.48.0+dfsg1-2co1bv2023dev2b4_all.control  rustc-dbgsym_1.48.0+dfsg1-2co1bv2023dev2b4_amd64.control  rustc-dbgsym_1.48.0+dfsg1-2co1bv2023dev2b4_arm64.control  rustc-dbgsym_1.48.0+dfsg1-2co1bv2023dev2b4_armhf.control  rustc_1.48.0+dfsg1-2co1.dsc  rustc_1.48.0+dfsg1-2co1bv2023dev2b4_amd64.changes  rustc_1.48.0+dfsg1-2co1bv2023dev2b4_amd64.control  rustc_1.48.0+dfsg1-2co1bv2023dev2b4_arm64+all.changes  rustc_1.48.0+dfsg1-2co1bv2023dev2b4_arm64.control  rustc_1.48.0+dfsg1-2co1bv2023dev2b4_armhf+all.changes  rustc_1.48.0+dfsg1-2co1bv2023dev2b4_armhf.control
sync2aptly/: Cargo.toml
sync2aptly/src/: lib.rs
