[workspace]
members = [
  "apt2aptly",
  "obs2aptly",
  "sync2aptly",
  "aptlyctl",
  "aptly-rest",
  "aptly-rest-mock",
  "aptly-latest-snapshots"
]

[workspace.dependencies]
# We need the fixes in https://github.com/indygreg/linux-packaging-rs/pull/11
debian-packaging = { git = "https://github.com/indygreg/linux-packaging-rs.git", rev = "0a04d6178876046f2e312702a8821f19d454d0c9" }
