[workspace]
members = [
  "apt2aptly",
  "obs2aptly",
  "sync2aptly",
  "aptlyctl",
  "aptly-rest",
  "aptly-rest-mock",
  "aptly-latest-snapshots"
]
resolver = "2"

[workspace.dependencies]
# We need the fixes in https://github.com/indygreg/linux-packaging-rs/pull/27
debian-packaging = { git = "https://github.com/refi64/linux-packaging-rs.git", rev = "4a6dadef906b099d05d2bf004ed557fbfeae1b10" }
