[package]
name = "apt2aptly"
version = "0.1.0"
edition = "2021"

[dependencies]
aptly-rest = { path = "../aptly-rest", version = "0.1.0" }
async-trait = "0.1.58"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6.2"
debian-packaging = { workspace = true }
futures = "0.3.21"
http = "0.2.9"
leon = "2.0.1"
reqwest = "0.11.18"
serde = "1.0.143"
sync2aptly = { path = "../sync2aptly" }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.16"
url = "2.2.2"
