[package]
name = "apt2aptly"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
aptly-rest = { path = "../aptly-rest", version = "0.1.0" }
async-trait = "0.1.88"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6.4"
debian-packaging = { workspace = true }
futures = "0.3.31"
http = "1.3.1"
leon = "3.0.2"
reqwest = "0.12.15"
serde = "1.0.219"
sync2aptly = { path = "../sync2aptly" }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
url = "2.5.4"
