[package]
name = "aptly-latest-snapshots"
version = "0.1.0"
edition = "2021"

[dependencies]
aptly-rest = { path = "../aptly-rest", version = "0.1.0" }
axum = "0.6.20"
axum-extra = { version = "0.7.7", features = ["typed-routing"] }
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6.2"
once_cell = "1.18.0"
regex = "1.9.3"
serde = "1.0.143"
thiserror = "1.0.44"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.16"
url = "2.2.2"
