[package]
name = "aptly-latest-snapshots"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
aptly-rest = { path = "../aptly-rest" }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-routing"] }
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6.4"
once_cell = "1.21.3"
regex = "1.11.1"
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
url = "2.5.4"
