[package]
name = "aptly-rest-mock"
version = "0.0.1"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
url = "2.5.4"
wiremock = "0.6.3"
