[package]
name = "aptly-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = [ "derive" ] }
reqwest = { version = "0.11.10", features = [ "json" ] }
tokio = { version = "1.19.2", features = [ "full" ] }
url = "2.2.2"
serde_json = "1.0.81"
clap = { version = "4", features = ["derive"] }
debian-packaging = "0.15.0"
thiserror = "1.0.31"
fnv = "1.0.7"
futures = "0.3.21"
tokio-util = { version = "0.7.3", features = ["compat"] }
md-5 = "0.10.1"
sha2 = "0.10.2"
sha1 = "0.10.1"
digest = "0.10.3"
base16ct = { version = "0.1.1", features = [ "alloc" ] }
walker = "1.0.1"
serde_with = "1.14.0"

[dev-dependencies]
anyhow = "1.0.58"
aptly-rest-mock = { path = "../aptly-rest-mock", version = "0.0.1" }
paste = "1.0.7"
