[package]
name = "aptly-rest"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
debian-packaging = { workspace = true }
digest = "0.10.7"
fnv = "1.0.7"
futures = "0.3.31"
md-5 = "0.10.6"
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["compat"] }
url = "2.5.4"
walkdir = "2.5.0"

[dev-dependencies]
anyhow = "1.0.98"
aptly-rest-mock = { path = "../aptly-rest-mock", version = "0.0.1" }
paste = "1.0.15"
