[package]
name = "aptlyctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptly-rest = { path = "../aptly-rest", version = "0.1.0" }
aptly-rest-mock = { version = "0.0.1", path = "../aptly-rest-mock" }
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6.2"
http = "0.2.9"
serde_json = "1.0.83"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.16"
url = "2.2.2"
