[package]
name = "aptlyctl"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptly-rest = { path = "../aptly-rest", version = "0.1.0" }
aptly-rest-mock = { version = "0.0.1", path = "../aptly-rest-mock" }
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6.4"
http = "1.3.1"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.20"
url = "2.5.4"
