[package]
name = "obs2aptly"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptly-rest = { path = "../aptly-rest", version = "0.1.0" }
async-trait = "0.1.58"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6.2"
debian-packaging = { workspace = true }
futures = "0.3.21"
serde = "1.0.143"
sync2aptly = { path = "../sync2aptly" }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.16"
url = "2.2.2"

[dev-dependencies]
aptly-rest-mock = { version = "0.0.1", path = "../aptly-rest-mock" }
once_cell = "1.17.1"
serde_json = "1.0.83"
tempfile = "3.3.0"
