[package]
name = "obs2aptly"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptly-rest = { path = "../aptly-rest", version = "0.1.0" }
async-trait = "0.1.88"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6.4"
debian-packaging = { workspace = true }
futures = "0.3.31"
serde = "1.0.219"
sync2aptly = { path = "../sync2aptly" }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
url = "2.5.4"

[dev-dependencies]
aptly-rest-mock = { version = "0.0.1", path = "../aptly-rest-mock" }
once_cell = "1.21.3"
serde_json = "1.0.140"
tempfile = "3.20.0"
