[package]
name = "sync2aptly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptly-rest = { path = "../aptly-rest", version = "0.1.0" }
async-trait = "0.1.58"
color-eyre = "0.6.2"
debian-packaging = "0.16.0"
http = "0.2.9"
serde = "1.0.143"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.37"
