[package]
name = "sync2aptly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptly-rest = { path = "../aptly-rest", version = "0.1.0" }
async-trait = "0.1.58"
backoff = { version = "0.4.0", features = ["tokio"] }
color-eyre = "0.6.2"
debian-packaging = "0.16.0"
futures = "0.3.28"
http = "0.2.9"
once_cell = "1.17.1"
reqwest = "0.11.18"
serde = "1.0.143"
tempfile = "3.6.0"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.37"
url = { version = "2.4.0", features = ["serde"] }
