[package]
name = "sync2aptly"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptly-rest = { path = "../aptly-rest", version = "0.1.0" }
async-trait = "0.1.88"
backoff = { version = "0.4.0", features = ["tokio"] }
color-eyre = "0.6.4"
debian-packaging = { workspace = true }
futures = "0.3.31"
http = "1.3.1"
once_cell = "1.21.3"
reqwest = "0.12.15"
serde = "1.0.219"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
